# WinPDFParser

./: .gitignore  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  TODO.md  package-lock.json  package.json
.github/workflows/: ci.yml  windows-installer-release.yml
app/: .eslintrc.cjs  electron-builder.yml  electron.vite.config.ts  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vitest.config.ts
app/src/main/: index.ts  ipc.ts  sidecar.ts  updater.ts
app/src/preload/: index.ts
app/src/renderer/: App.tsx  index.css  index.html
app/src/renderer/components/: Agent.tsx  FeedbackDialog.tsx  Library.tsx  Processor.tsx  Search.tsx  Settings.tsx  UpdateBanner.tsx  Viewer.tsx  WatchBanner.tsx
app/src/renderer/components/ui/: Button.tsx  Input.tsx
app/src/shared/: ipc.ts  types.ts
app/tests/: agent.test.tsx  library.test.tsx  processor.test.tsx  sanitize-contract.test.ts  search.test.tsx  settings.test.tsx  shared-types.test.ts  update-banner.test.tsx  viewer.test.tsx  watch-banner.test.tsx
docs/: BUILD.md  FOLDER_MONITORING.md  INSTALL.md  OCR_AND_OLLAMA.md
sidecar/: README.md  pyinstaller.spec  pyproject.toml
sidecar/pdf_parser_sidecar/: __init__.py  __main__.py  agent.py  app.py  config.py  db.py  llm.py  logging_setup.py  models.py  ocr.py  queue.py  sanitize.py  watcher.py
sidecar/pdf_parser_sidecar/migrations/: 001_initial.sql  002_document_metadata_and_failures.sql
sidecar/tests/: test_agent.py  test_app.py  test_db.py  test_entrypoint.py  test_pipeline.py  test_sanitize.py  test_watcher.py
