[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-parser-sidecar"
version = "0.5.0"
description = "Local PDF OCR + AI rename + FTS5 search sidecar for PDF-Parser."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "httpx>=0.27",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.9",
]
ocr = [
    "ocrmypdf>=16.0",
]
package = [
    "pyinstaller>=6.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pdf_parser_sidecar*"]

[tool.setuptools.package-data]
pdf_parser_sidecar = ["migrations/*.sql"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["ocrmypdf", "ocrmypdf.*", "pypdf", "pypdf.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
